# Renju

./: .gitignore  CMakeLists.txt  QRenju.pro  README  README.md  resources.qrc
.github/workflows/: build.yml
Renju/: GameWidget.cpp  GameWidget.h  Renju.pro  main.cpp  renju.cpp  renju.h  renju.rc  renju.ui  resources.qrc
src/: CMakeLists.txt  app.pro  controller.cpp  controller.h  dot.cpp  dot.h  game.cpp  game.h  gameboard.cpp  gameboard.h  humanplayer.cpp  humanplayer.h  i_player.h  main.cpp  player.cpp  player.h  renju.cpp  renju.h  simpleai.cpp  simpleai.h  window.cpp  window.h  window.ui
src/qml/: Board.qml  Dot.qml  Main.qml  Menu.qml  StartScreen.qml  dot.qml  main.qml  qml.qrc
