cmake_minimum_required(VERSION 3.13)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_PARALLEL_LEVEL ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -fstrict-aliasing -Wno-deprecated-declarations -Wno-unused-variable")
project (Renju)
get_filename_component(RESOURCES resources.qrc ABSOLUTE CACHE)
add_subdirectory(src)
